--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -40,3 +40,41 @@
 .read-the-docs {
   color: #888;
 }
+.app {
+  text-align: center;
+}
+
+.app.dark {
+  background-color: #121212;
+  color: white;
+}
+
+.profile img {
+  border-radius: 50%;
+}
+
+.sidebar {
+  float: left;
+  width: 20%;
+}
+
+main {
+  margin-left: 20%;
+  padding: 20px;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  background: #f9f9f9;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
